refactor + split android projects